Added health to client, cli now shows title and description on rename, added endpoint to refresh a token, refactored the router
